deployment_config/kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-random-tools
  namespace: prod
spec:
  type: NodePort
  selector:
    app: ms-random-tools
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30082
