deployment_config/kube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-random-tools-ingress
  namespace: prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  rules:
  - host: ms-random-tools.bagussan.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ms-random-tools
            port:
              number: 8080
  tls:
    - hosts:
        - bagussan.my.id
      secretName: my-webapp-tls
